--- a/src/data/schedule.toml
+++ b/src/data/schedule.toml
@@ -5,62 +5,62 @@
 "slotDuration" = 20
 "location" = "Georgetown"
 "mapUrl" = "https://goo.gl/maps/X1TwS4CkwqQyV1DUA" 
-"stages"= [ "jules", "coffee", "underpass", "artisan" ]
+"stages" = ["coffee", 		"overpass", "jules", 			"julesparking",	"electric"] 
+[days.schedule]
+"18:00" = [ "8bit", 			"hungry", 	"jambalaya", 	"", 						"sticks" ]
+"18:20" = [ "neon", 			"hungry", 	"brasscals", 	"", 						"chaotic" ]
+"18:40" = [ "soundwave", 	"carnival", "meownow", 		"", 						"baque" ]
+"19:00" = [ "reigncity", 	"carnival", "meownow", 		"", 						"brasscals" ]
+"19:20" = [ "redalert", 	"vamola", 	"onelove", 		"", 						"tacomarama" ]
+"19:40" = [ "jambalaya", 	"vamola", 	"chunky", 		"", 						"window" ]
+"20:00" = [ "bluethunder","filthy", 	"chunky", 		"", 						"meownow" ]
+"20:20" = [ "analog", 		"neighbors","baque", 			"", 						"meownow" ]
+"20:40" = [ "analog", 		"neon", 		"filthy", 		"", 						"artesian" ]
+"21:00" = [ "neighbors", 	"window", 	"8bit", 			"", 						"artesian" ]
+"21:20" = [ "mission", 		"chaotic", 	"sticks", 		"", 						"onelove" ]
+"21:40" = [ "mission", 		"chaotic", 	"tmb", 				"",							"tacomarama" ]
+"22:00" = [ "", 					"", 				"tmb",				"queens", 			"" ]
+"22:20" = [ "", 					"", 				"burnout", 		"", 						"" ]
+"22:40" = [ "", 					"", 				"burnout", 		"", 						"" ]
+"23:00" = [ "", 					"", 				"filthy", 		"", 						"" ]
+"23:20" = [ "", 					"", 				"jules", 			"", 						"" ]
+"23:40" = [ "", 					"", 				"jules", 			"", 						"" ]
 [days.coordinates]
 "info" = [845.0,1040.0]
 "medic" = [845.0,1130.0]
 "potty" = [845.0,953.0]
-[days.schedule]
-"18:00" = [ "", "", "", "" ]
-"18:20" = [ "", "", "", "" ]
-"18:40" = [ "", "", "", "" ]
-"19:00" = [ "", "", "", "" ]
-"19:20" = [ "", "", "", "" ]
-"19:40" = [ "", "", "", "" ]
-"20:00" = [ "", "", "", "" ]
-"20:20" = [ "", "", "", "" ]
-"20:40" = [ "", "", "", "" ]
-"21:00" = [ "", "", "", "" ]
-"21:20" = [ "", "", "", "" ]
-"21:40" = [ "", "", "", "" ]
 
 [[days]]
 "date"	= "2023-06-03"
 "startTime" = "12:00"
 "endTime" = "20:00"
-"slotDuration" = 20
+"slotDuration" = 30
 "location" = "Columbia City"
-"stages"= [ "rac", "valley", "hill", "gateway" ]
+"stages"= [ "hill", "valley", "rac", "gateway" ]
 "mapUrl"= "https://goo.gl/maps/AWpWWjvZfAHwrNyv5"
 [days.coordinates]
 "info" = [480.0,1270.0]
 "medic" = [480.0,1180.0]
 "potty" = [410.0,1330.0]
 [days.schedule]
-"12:00" = [ "", "", "", "" ]
-"12:20" = [ "", "", "", "" ]
-"12:40" = [ "", "", "", "" ]
-"13:00" = [ "", "", "", "" ]
-"13:20" = [ "", "", "", "" ]
-"13:40" = [ "", "", "", "" ]
-"14:00" = [ "", "", "", "" ]
-"14:20" = [ "", "", "", "" ]
-"14:40" = [ "", "", "", "" ]
-"15:00" = [ "", "", "", "" ]
-"15:20" = [ "", "", "", "" ]
-"15:40" = [ "", "", "", "" ]
-"16:00" = [ "", "", "", "" ]
-"16:20" = [ "", "", "", "" ]
-"16:40" = [ "", "", "", "" ]
-"17:00" = [ "", "", "", "" ]
-"17:20" = [ "", "", "", "" ]
-"17:40" = [ "", "", "", "" ]
-"18:00" = [ "", "", "", "" ]
-"18:20" = [ "", "", "", "" ]
-"18:40" = [ "", "", "", "" ]
-"19:00" = [ "", "", "", "" ]
-"19:20" = [ "", "", "", "" ]
-"19:40" = [ "", "", "", "" ]
+"12:00" = [ "chunky", 	"", 					"", 					"" ]
+"12:30" = [ "onelove", 	"artesian", 	"", 					"brassless" ]
+"13:00" = [ "ballard", 	"baque", 			"", 					"window" ]
+"13:30" = [ "carnival", "mission", 		"sticks", 		"chunky" ]
+"14:00" = [ "vamola", 	"unexpected", "meownow", 		"artesian" ]
+"14:30" = [ "", 				"hungry", 		"meownow", 		"8bit" ]
+"15:00" = [ "filthy", 	"brasscals", 	"kouyate", 		"unexpected" ]
+"15:40" = [ "chaotic", 	"tacomarama", "tmb", 				"onelove" ]
+"16:00" = [ "neighbors","window", 		"ballard", 		"sticks" ]
+"16:30" = [ "tmb", 			"filthy", 		"burnout", 		"meownow" ]
+"17:00" = [ "hungry", 	"vamola", 		"gansango", 	"meownow" ]
+"17:30" = [ "mission", 	"neon", 			"chunky", 		"" ]
+"18:00" = [ "8bit", 		"chaotic", 		"brasscals",	"" ]
+"18:30" = [ "chunky", 	"baque", 			"brassless",	"" ]
+"19:00" = [ "burnout", 	"neighbors", 	"tacomarama", "" ]
+"19:30" = [ "allstars", "", 					"", 					"" ]
+"20:00" = [ "", 				"", 					"", 					"queens" ]
+
 
 [[days]]
 "date"	= "2023-06-04"
@@ -69,28 +69,29 @@
 "slotDuration" = 20
 "location" = "Yesler Terrace Park"
 "mapUrl" = "https://goo.gl/maps/Y2dD5U16Fqf4Fr6U8"
-"stages"= [ "upper", "lower" ]
+"stages"= [ "spray", "lawn" ]
 [days.coordinates]
 "info" = [963.0,540.0]
 "medic" = [875.0,561.0]
 "potty" = [1235.0,1031.0]
 [days.schedule]
-"12:00" = [ "", "" ]
-"12:20" = [ "", "" ]
-"12:40" = [ "", "" ]
-"13:00" = [ "", "" ]
-"13:20" = [ "", "" ]
-"13:40" = [ "", "" ]
-"14:00" = [ "", "" ]
-"14:20" = [ "", "" ]
-"14:40" = [ "", "" ]
-"15:00" = [ "", "" ]
-"15:20" = [ "", "" ]
-"15:40" = [ "", "" ]
-"16:00" = [ "", "" ]
-"16:20" = [ "", "" ]
-"16:40" = [ "", "" ]
-"17:00" = [ "", "" ]
-"17:20" = [ "", "" ]
-"17:40" = [ "", "" ]
+"12:00" = [ "artesian", "brassless" ]
+"12:20" = [ "artesian", "seattleu" ]
+"12:40" = [ "goat", 		"neighbors" ]
+"13:00" = [ "chunky", 	"neighbors" ]
+"13:20" = [ "chunky", 	"meownow" ]
+"13:40" = [ "filthy", 	"meownow" ]
+"14:00" = [ "step", 		"baque" ]
+"14:20" = [ "khmer", 		"mission" ]
+"14:40" = [ "seismic", 	"mission" ]
+"15:00" = [ "carnival", "brasscals" ]
+"15:20" = [ "carnival", "brasscals" ]
+"15:40" = [ "kokon", 		"onelove" ]
+"16:00" = [ "8bit", 		"sticks" ]
+"16:20" = [ "tmb", 			"chaotic" ]
+"16:40" = [ "hungry", 	"burnout" ]
+"17:00" = [ "hungry", 	"tacomarama" ]
+"17:20" = [ "", 				"neon" ]
+"17:40" = [ "", 				"allstars" ]
+"18:00" = [ "", 				"queens" ]
 
