--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@rollup/plugin-yaml": "^4.0.1",
     "@skeletonlabs/skeleton": "^1.2.5",
     "svelte-icons": "^2.1.0",
+    "typescript-plugin-toml": "^0.2.0",
     "vite-plugin-toml": "^0.5.0"
   }
 }
