--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
       "@images/*": ["src/assets/images/*"]
     },
     "jsx": "react-jsx",
-    "jsxImportSource": "react"
+    "jsxImportSource": "react",
+    "plugins": [
+      {"name": "typescript-plugin-toml"}
+    ]
   }
 }
