--- a/src/data/schedule.toml
+++ b/src/data/schedule.toml
@@ -5,26 +5,26 @@
 "slotDuration" = 20
 "location" = "Georgetown"
 "mapUrl" = "https://goo.gl/maps/X1TwS4CkwqQyV1DUA" 
-"stages" = ["coffee", 		"overpass", "jules", 			"julesparking",	"electric"] 
+"stages" = ["coffee", 		"overpass", "jules", 			"electric"] 
 [days.schedule]
-"18:00" = [ "8bit", 			"hungry", 	"jambalaya", 	"", 						"sticks" ]
-"18:20" = [ "neon", 			"hungry", 	"brasscals", 	"", 						"chaotic" ]
-"18:40" = [ "soundwave", 	"carnival", "meownow", 		"", 						"baque" ]
-"19:00" = [ "reigncity", 	"carnival", "meownow", 		"", 						"brasscals" ]
-"19:20" = [ "redalert", 	"vamola", 	"onelove", 		"", 						"tacomarama" ]
-"19:40" = [ "jambalaya", 	"vamola", 	"chunky", 		"", 						"window" ]
-"20:00" = [ "bluethunder","filthy", 	"chunky", 		"", 						"meownow" ]
-"20:20" = [ "analog", 		"neighbors","baque", 			"", 						"meownow" ]
-"20:40" = [ "analog", 		"neon", 		"filthy", 		"", 						"artesian" ]
-"21:00" = [ "neighbors", 	"window", 	"8bit", 			"", 						"artesian" ]
-"21:20" = [ "mission", 		"chaotic", 	"sticks", 		"", 						"onelove" ]
-"21:40" = [ "mission", 		"chaotic", 	"tmb", 				"",							"tacomarama" ]
-"22:00" = [ "", 					"", 				"tmb",				"queens", 			"" ]
-"22:20" = [ "", 					"", 				"burnout", 		"", 						"" ]
-"22:40" = [ "", 					"", 				"burnout", 		"", 						"" ]
-"23:00" = [ "", 					"", 				"filthy", 		"", 						"" ]
-"23:20" = [ "", 					"", 				"jules", 			"", 						"" ]
-"23:40" = [ "", 					"", 				"jules", 			"", 						"" ]
+"18:00" = [ "8bit", 			"hungry", 	"jambalaya", 	"sticks" ]
+"18:20" = [ "neon", 			"hungry", 	"brasscals", 	"chaotic" ]
+"18:40" = [ "soundwave", 	"carnival", "meownow", 		"baque" ]
+"19:00" = [ "reigncity", 	"carnival", "meownow", 		"brasscals" ]
+"19:20" = [ "redalert", 	"vamola", 	"onelove", 		"tacomarama" ]
+"19:40" = [ "jambalaya", 	"vamola", 	"chunky", 		"window" ]
+"20:00" = [ "bluethunder","filthy", 	"chunky", 		"meownow" ]
+"20:20" = [ "analog", 		"neighbors","baque", 			"meownow" ]
+"20:40" = [ "analog", 		"neon", 		"filthy", 		"artesian" ]
+"21:00" = [ "neighbors", 	"window", 	"8bit", 			"artesian" ]
+"21:20" = [ "mission", 		"chaotic", 	"sticks", 		"onelove" ]
+"21:40" = [ "mission", 		"chaotic", 	"tmb", 				"tacomarama" ]
+"22:00" = [ "", 					"", 				"tmb",				"" ]
+"22:20" = [ "", 					"", 				"burnout", 		"" ]
+"22:40" = [ "", 					"", 				"burnout", 		"" ]
+"23:00" = [ "", 					"", 				"filthy", 		"" ]
+"23:20" = [ "", 					"", 				"jules", 			"" ]
+"23:40" = [ "", 					"", 				"jules", 			"" ]
 [days.coordinates]
 "info" = [845.0,1040.0]
 "medic" = [845.0,1130.0]
@@ -36,12 +36,8 @@
 "endTime" = "20:00"
 "slotDuration" = 30
 "location" = "Columbia City"
-"stages"= [ "hill", "valley", "rac", "gateway" ]
 "mapUrl"= "https://goo.gl/maps/AWpWWjvZfAHwrNyv5"
-[days.coordinates]
-"info" = [480.0,1270.0]
-"medic" = [480.0,1180.0]
-"potty" = [410.0,1330.0]
+"stages"= [ "hill", 		"valley", 		"rac", 				"gateway" ]
 [days.schedule]
 "12:00" = [ "chunky", 	"", 					"", 					"" ]
 "12:30" = [ "onelove", 	"artesian", 	"", 					"brassless" ]
@@ -59,7 +55,10 @@
 "18:30" = [ "chunky", 	"baque", 			"brassless",	"" ]
 "19:00" = [ "burnout", 	"neighbors", 	"tacomarama", "" ]
 "19:30" = [ "allstars", "", 					"", 					"" ]
-"20:00" = [ "", 				"", 					"", 					"queens" ]
+[days.coordinates]
+"info" = [480.0,1270.0]
+"medic" = [480.0,1180.0]
+"potty" = [410.0,1330.0]
 
 
 [[days]]
@@ -69,11 +68,7 @@
 "slotDuration" = 20
 "location" = "Yesler Terrace Park"
 "mapUrl" = "https://goo.gl/maps/Y2dD5U16Fqf4Fr6U8"
-"stages"= [ "spray", "lawn" ]
-[days.coordinates]
-"info" = [963.0,540.0]
-"medic" = [875.0,561.0]
-"potty" = [1235.0,1031.0]
+"stages"= [ "spray", 		"lawn" ]
 [days.schedule]
 "12:00" = [ "artesian", "brassless" ]
 "12:20" = [ "artesian", "seattleu" ]
@@ -94,4 +89,8 @@
 "17:20" = [ "", 				"neon" ]
 "17:40" = [ "", 				"allstars" ]
 "18:00" = [ "", 				"queens" ]
+[days.coordinates]
+"info" = [963.0,540.0]
+"medic" = [875.0,561.0]
+"potty" = [1235.0,1031.0]
 
