--- a/src/data/schedule.toml
+++ b/src/data/schedule.toml
@@ -8,7 +8,7 @@
 "stages" = ["coffee", 		"overpass", "jules", 			"electric"] 
 [days.schedule]
 "18:00" = [ "8bit", 			"hungry", 	"jambalaya", 	"sticks" ]
-"18:20" = [ "neon", 			"hungry", 	"brasscals", 	"chaotic" ]
+"18:20" = [ "neon", 			"hungry", 	"tacomarama", 	"chaotic" ]
 "18:40" = [ "soundwave", 	"carnival", "meownow", 		"baque" ]
 "19:00" = [ "reigncity", 	"carnival", "meownow", 		"brasscals" ]
 "19:20" = [ "redalert", 	"vamola", 	"onelove", 		"tacomarama" ]
@@ -18,7 +18,7 @@
 "20:40" = [ "analog", 		"neon", 		"filthy", 		"artesian" ]
 "21:00" = [ "neighbors", 	"window", 	"8bit", 			"artesian" ]
 "21:20" = [ "mission", 		"chaotic", 	"sticks", 		"onelove" ]
-"21:40" = [ "mission", 		"chaotic", 	"tmb", 				"tacomarama" ]
+"21:40" = [ "mission", 		"chaotic", 	"tmb", 				"brasscals" ]
 "22:00" = [ "", 					"", 				"tmb",				"" ]
 "22:20" = [ "", 					"", 				"burnout", 		"" ]
 "22:40" = [ "", 					"", 				"burnout", 		"" ]
@@ -44,7 +44,7 @@
 "13:00" = [ "ballard", 	"baque", 			"", 					"window" ]
 "13:30" = [ "carnival", "mission", 		"sticks", 		"chunky" ]
 "14:00" = [ "vamola", 	"unexpected", "meownow", 		"artesian" ]
-"14:30" = [ "", 				"hungry", 		"meownow", 		"8bit" ]
+"14:30" = [ "burnout", 	"hungry", 		"meownow", 		"8bit" ]
 "15:00" = [ "filthy", 	"brasscals", 	"kouyate", 		"unexpected" ]
 "15:40" = [ "chaotic", 	"tacomarama", "tmb", 				"onelove" ]
 "16:00" = [ "neighbors","window", 		"ballard", 		"sticks" ]
@@ -53,7 +53,7 @@
 "17:30" = [ "mission", 	"neon", 			"chunky", 		"" ]
 "18:00" = [ "8bit", 		"chaotic", 		"brasscals",	"" ]
 "18:30" = [ "chunky", 	"baque", 			"brassless",	"" ]
-"19:00" = [ "burnout", 	"neighbors", 	"tacomarama", "" ]
+"19:00" = [ "tmb", 			"neighbors", 	"tacomarama", "" ]
 "19:30" = [ "allstars", "", 					"", 					"" ]
 [days.coordinates]
 "info" = [480.0,1270.0]
