Media | Add charlie d 2023 spring photos

--- a/src/data/media.toml
+++ b/src/data/media.toml
@@ -1,5 +1,10 @@
+[[2023]]
+name = 'Charles Daniels'
+type = 'photos'
+url = 'https://charlesdaniels.smugmug.com/HonkFest-West-2023-Spring-Rager-Fundraiser/'
+
 [[2022]]
-name = 'Charlie Daniels'
+name = 'Charles Daniels'
 type = 'video'
 url = 'https://www.youtube.com/playlist?list=PLL7ppauF4Zjo49-V7tSZ-abxuueP-deBt'
 [[2022]]
@@ -8,7 +13,7 @@ type = 'photos'
 url = 'https://www.espressobuzz.net/Events/2022/Honkfest'
 
 [[2021]]
-name = 'Charlie Daniels'
+name = 'Charles Daniels'
 type = 'video'
 url = 'https://www.youtube.com/playlist?list=PLL7ppauF4ZjoMkECEbEGaEUJqnUm36ovn'
 [[2021]]
