Festival | Update Schedule

--- a/src/data/schedule.toml
+++ b/src/data/schedule.toml
@@ -8,7 +8,7 @@
 "stages" = ["coffee", 		"overpass", "jules", 			"electric"] 
 [days.schedule]
 "18:00" = [ "8bit", 			"hungry", 	"jambalaya", 	"sticks" ]
-"18:20" = [ "neon", 			"hungry", 	"tacomarama", 	"chaotic" ]
+"18:20" = [ "neon", 			"hungry", 	"tacomarama", "chaotic" ]
 "18:40" = [ "soundwave", 	"carnival", "meownow", 		"baque" ]
 "19:00" = [ "reigncity", 	"carnival", "meownow", 		"brasscals" ]
 "19:20" = [ "redalert", 	"vamola", 	"onelove", 		"tacomarama" ]
@@ -47,10 +47,10 @@
 "14:30" = [ "burnout", 	"hungry", 		"meownow", 		"8bit" ]
 "15:00" = [ "filthy", 	"brasscals", 	"kouyate", 		"unexpected" ]
 "15:40" = [ "chaotic", 	"tacomarama", "tmb", 				"onelove" ]
-"16:00" = [ "neighbors","window", 		"ballard", 		"sticks" ]
+"16:00" = [ "neighbors","window", 		"ballard", 		"carnival" ]
 "16:30" = [ "tmb", 			"filthy", 		"burnout", 		"meownow" ]
 "17:00" = [ "hungry", 	"vamola", 		"gansango", 	"meownow" ]
-"17:30" = [ "mission", 	"neon", 			"chunky", 		"" ]
+"17:30" = [ "mission", 	"neon", 			"chunky", 		"sticks" ]
 "18:00" = [ "8bit", 		"chaotic", 		"brasscals",	"" ]
 "18:30" = [ "chunky", 	"baque", 			"brassless",	"" ]
 "19:00" = [ "tmb", 			"neighbors", 	"tacomarama", "" ]
