--- a/src/data/schedule.toml
+++ b/src/data/schedule.toml
@@ -5,7 +5,7 @@
 "slotDuration" = 20
 "location" = "Georgetown"
 "mapUrl" = "https://goo.gl/maps/X1TwS4CkwqQyV1DUA" 
-"stages" = ["coffee", 		"overpass", "jules", 			"electric"] 
+"stages" = ["coffee", 		"overpass", "jules", 			"electric"]
 [days.schedule]
 "18:00" = [ "8bit", 			"hungry", 	"jambalaya", 	"sticks" ]
 "18:20" = [ "neon", 			"hungry", 	"tacomarama", "chaotic" ]
@@ -25,6 +25,8 @@
 "23:00" = [ "", 					"", 				"filthy", 		"" ]
 "23:20" = [ "", 					"", 				"jules", 			"" ]
 "23:40" = [ "", 					"", 				"jules", 			"" ]
+[days.allday]
+"puppets"		= [ "westcas",		"lovett"]
 [days.coordinates]
 "info" = [845.0,1040.0]
 "medic" = [845.0,1130.0]
@@ -55,6 +57,7 @@
 "18:30" = [ "chunky", 	"baque", 			"brassless",	"" ]
 "19:00" = [ "tmb", 			"neighbors", 	"tacomarama", "" ]
 "19:30" = [ "allstars", "", 					"", 					"" ]
+[days.allday]
 [days.coordinates]
 "info" = [480.0,1270.0]
 "medic" = [480.0,1180.0]
@@ -89,6 +92,8 @@
 "17:20" = [ "", 				"neon" ]
 "17:40" = [ "", 				"allstars" ]
 "18:00" = [ "", 				"queens" ]
+[days.allday]
+"puppets"		= [ "westcas",		"lovett" ]
 [days.coordinates]
 "info" = [963.0,540.0]
 "medic" = [875.0,561.0]
