Festival | Band page scroll to top

--- a/src/data/bands.toml
+++ b/src/data/bands.toml
@@ -339,4 +339,4 @@ description = "JAM led by Filthy FemCorps"
 name = "West Cascade Puppet Brigade"
 location = "Seattle, WA"
 url = "https://www.facebook.com/PuppetBrigade/"
-description = "Puppet Performance. West Cascade Puppet Brigade presents new tellings of ancient fairy & folk tales."
+description = "West Cascade Puppet Brigade is a multifaceted, intergenerational group of puppeteers that bring joy & whimsey to parades, festivals, fairs, & events. From giant puppets to shadows, they bring ancient fairy & folk tales to life with a sensibility for modern audiences."
