Festival | Update bios

--- a/src/data/bands.toml
+++ b/src/data/bands.toml
@@ -38,7 +38,7 @@ description = ""
 name = "Baque Maré"
 location = "Seattle, WA"
 url = "https://www.facebook.com/baquemareseattle/"
-description = ""
+description = "Página oficial do grupo de maracatu baque virado de Seattle. Official account of Seattle's own mara"
 
 [bigblitz]
 name = "Big Blitz"
