Festival | Honk All stars bio

--- a/src/data/bands.toml
+++ b/src/data/bands.toml
@@ -150,10 +150,10 @@ description = ""
 
 
 [allstars]
-name = "Honk All-Stars (open jam)"
+name = "HONK! All-Stars (open jam)"
 location = "Everywhere"
-url = "#"
-description = ""
+url = ""
+description = "HONK! All-Stars is a collection the best and the loudest musicians from all over. Anyone who can play is welcome to participate"
 
 [hungry]
 name = "Hungry March Band"
