--- a/src/data/bands.toml
+++ b/src/data/bands.toml
@@ -148,12 +148,11 @@ location = ""
 url = ""
 description = ""
 
-
 [allstars]
 name = "HONK! All-Stars (open jam)"
 location = "Everywhere"
-url = ""
-description = "HONK! All-Stars is a collection the best and the loudest musicians from all over. Anyone who can play is welcome to participate"
+url = "https://drive.google.com/drive/folders/1WO2k6tIspmt4BY8wz62tWIBVZOIPIftP?usp=share_link"
+description = "HONK! All-Stars is a collection of the best and the loudest musicians from all over. Anyone who can play is welcome to participate."
 
 [hungry]
 name = "Hungry March Band"
