--- a/src/data/schedule.toml
+++ b/src/data/schedule.toml
@@ -45,9 +45,9 @@
 "12:30" = [ "onelove", 	"artesian", 	"", 					"brassless" ]
 "13:00" = [ "ballard", 	"baque", 			"", 					"window" ]
 "13:30" = [ "carnival", "mission", 		"sticks", 		"chunky" ]
-"14:00" = [ "vamola", 	"unexpected", "meownow", 		"artesian" ]
+"14:00" = [ "vamola", 	"mission", 		"meownow", 		"artesian" ]
 "14:30" = [ "burnout", 	"hungry", 		"meownow", 		"8bit" ]
-"15:00" = [ "filthy", 	"brasscals", 	"kouyate", 		"unexpected" ]
+"15:00" = [ "filthy", 	"brasscals", 	"kouyate", 		"8bit" ]
 "15:30" = [ "chaotic", 	"tacomarama", "tmb", 				"onelove" ]
 "16:00" = [ "neighbors","window", 		"ballard", 		"carnival" ]
 "16:30" = [ "tmb", 			"filthy", 		"burnout", 		"meownow" ]
