Festival | Update schedule

--- a/src/data/schedule.toml
+++ b/src/data/schedule.toml
@@ -45,7 +45,7 @@
 "12:30" = [ "onelove", 	"artesian", 	"", 					"brassless" ]
 "13:00" = [ "ballard", 	"baque", 			"", 					"window" ]
 "13:30" = [ "carnival", "mission", 		"sticks", 		"chunky" ]
-"14:00" = [ "vamola", 	"mission", 		"meownow", 		"artesian" ]
+"14:00" = [ "vamola", 	"neighbors", 	"meownow", 		"artesian" ]
 "14:30" = [ "burnout", 	"hungry", 		"meownow", 		"8bit" ]
 "15:00" = [ "filthy", 	"brasscals", 	"kouyate", 		"8bit" ]
 "15:30" = [ "chaotic", 	"tacomarama", "tmb", 				"onelove" ]
