Remove current festival

--- a/src/data/nav.toml
+++ b/src/data/nav.toml
@@ -1,6 +1,6 @@
-[[links]]
-name = "Festival"
-link = "/festival"
+# [[links]]
+# name = "Festival"
+# link = "/festival"
 
 [[links]]
 name = "Volunteer"
