Media | Add Dylan Lockard 2023 photos

--- a/src/data/media.toml
+++ b/src/data/media.toml
@@ -2,6 +2,10 @@
 name = 'Charles Daniels'
 type = 'photos'
 url = 'https://charlesdaniels.smugmug.com/HonkFest-West-2023-Spring-Rager-Fundraiser/'
+[[2023]]
+name = 'Dylan Lockard'
+type = 'photos'
+url = '/media/2023/dylan_lockard'
 
 [[2022]]
 name = 'Charles Daniels'
