--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@rollup/plugin-yaml": "^4.1.0",
     "@skeletonlabs/skeleton": "^1.2.5",
+    "imagekit": "^4.1.3",
     "svelte-icons": "^2.1.0",
     "typescript-plugin-toml": "^0.2.0",
     "vite-plugin-toml": "^0.5.0"
