Media | Set Dylan Lockard photo location to google drive

--- a/src/data/media.toml
+++ b/src/data/media.toml
@@ -5,7 +5,7 @@ url = 'https://charlesdaniels.smugmug.com/HonkFest-West-2023-Spring-Rager-Fundra
 [[2023]]
 name = 'Dylan Lockard'
 type = 'photos'
-url = '/media/2023/dylan_lockard'
+url = 'https://drive.google.com/drive/folders/1mTSL9ciYJpVttcUDoVXMauO7tw3EQzZZ'
 
 [[2022]]
 name = 'Charles Daniels'
