Home | Update Slideshow images

--- a/src/data/slideshow.toml
+++ b/src/data/slideshow.toml
@@ -1,27 +1,35 @@
 [[slides]]
-description = '8bit Georgetown 2022 Photo by Espressobuzz'
-image_url = 'https://ik.imagekit.io/thegoldendino/hfw/carousel/2022/8bit-2022-georgetown-espressobuzz_L6GwOxLj4.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1672621076822'
+description = 'Baque Mare - Bad Jimmys Thursday 2023 - Photo by Espresso Buzz'
+image_url = 'https://ik.imagekit.io/honkfestwest/carousel/2023-06-01-espressobuzz-baquemare-badjimmys_lcawYDQfe.jpg?updatedAt=1686509391803'
 
 [[slides]]
-description = 'Chaotic Noise Columbia City 2022 Photo by Espressobuzz'
-image_url = 'https://ik.imagekit.io/thegoldendino/hfw/carousel/2022/chaotic-2022-columbiacity-espressobuzz_LWp1WAwIs.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1672621078137'
+description = 'Seattle Kokon Taiko - Yeslar Terrace Park 2023 Photo by Dylan Lockard'
+image_url = 'https://ik.imagekit.io/honkfestwest/carousel/HFW-Day-3-YeslerTerrace-DylanLockard-60_ZYg2JIqwO.jpg?updatedAt=1686507405436'
 
 [[slides]]
-description = 'Burn Out Brass Band Georgetown 2022 Photo by Espressobuzz'
-image_url = 'https://ik.imagekit.io/thegoldendino/hfw/carousel/2022/burnout-2022-georgetown-espressobuzz_J0CSKg0WO.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1672621078811'
+description = '8bit - Yeslar Terrace Park 2023 - Photo by Dylan Lockard'
+image_url = 'https://ik.imagekit.io/honkfestwest/carousel/HFW-Day-3-YeslerTerrace-DylanLockard-81_MZsz-OQEy.jpg?updatedAt=1686507404286'
 
 [[slides]]
-description = 'Seattle Kokon Taiko Yeslar Terrace Park 2022 Photo by Espressobuzz'
-image_url = 'https://ik.imagekit.io/thegoldendino/hfw/carousel/2022/kokontaiko-2022-yesler-espressobuzz_NspspoX1j1.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1672621082187'
+description = 'Dancer - Georgetown 2023 - Photo by Dylan Lockard'
+image_url = 'https://ik.imagekit.io/honkfestwest/carousel/HFW-Day-1-Georgetown-DylanLockard-47_8lANK317eP.jpg?updatedAt=1686507234300'
 
 [[slides]]
-description = 'Funkrust Yeslar Terrace Park 2022 Photo by Espressobuzz'
-image_url = 'https://ik.imagekit.io/thegoldendino/hfw/carousel/2022/funkrust-2022-yesler-espressobuzz_nieCBjP6V.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1672621084651'
+description = 'TMB Trombone - Columbia City 2023 - Photo by Dylan Lockard'
+image_url = 'https://ik.imagekit.io/honkfestwest/carousel/HFW-Day-2-ColumbiaCity-DylanLockard-70_jNCYP_N-q.jpg?updatedAt=1686507234192'
+
+[[slides]] 
+description = 'Chaotic Noise Trumpet - Georgetown 2023 - Photo by Dylan Lockard'
+image_url = 'https://ik.imagekit.io/honkfestwest/carousel/HFW-Day-1-Georgetown-DylanLockard-94_JvY9UB5uE.jpg?updatedAt=1686507234119'
 
 [[slides]]
-description = 'Spilkis Georgetown 2022 Photo By Espressobuzz'
-image_url = 'https://ik.imagekit.io/thegoldendino/hfw/carousel/2022/shpilkis-2022-columbiacity-espressobuzz_QE-LIXg8xG.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1672621085257'
+description = 'West Cascade Puppet Brigade - Georgetown 2023 - Photo by Dylan Lockard'
+image_url = 'https://ik.imagekit.io/honkfestwest/carousel/HFW-Day-1-Georgetown-DylanLockard-85_v21dBvy3r.jpg?updatedAt=1686507232006'
 
 [[slides]]
-description = 'Neon Brass Party Hazard Factory 2022 Photo By Espressobuzz'
-image_url = 'https://ik.imagekit.io/thegoldendino/hfw/carousel/2022/neonbrassparty-2022-hazardfactory-espressobuzz_u3lJ8Fn4rl.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1672621086099'
+description = 'Lu Badu - Bad Jimmys Thursday 2023 - Photo by Charles Daniels'
+image_url = 'https://ik.imagekit.io/honkfestwest/carousel/bad_jimmys-thursday-2023-charlesdaniels_oE_UHmIx6?updatedAt=1686508865424'
+
+[[slides]]
+description = 'Soul Jambalaya - Georgetown 2023 - Photo by Espressobuzz'
+image_url = 'https://ik.imagekit.io/honkfestwest/carousel/soul-jambalaya-georgetown-2023-espressobuzz_eUrb1-md_.jpg?updatedAt=1686509770520'
