Media | update charles 2023 video link

--- a/src/data/media.toml
+++ b/src/data/media.toml
@@ -5,7 +5,7 @@ url = 'https://charlesdaniels.smugmug.com/HonkFest-West-2023-Spring-Rager-Fundra
 [[2023]]
 name = 'Charles Daniels'
 type = 'videos'
-url = 'https://www.youtube.com/watch?v=2FM_IAg6bk0&list=PLL7ppauF4ZjqGG6iPPrNySe2QLQndI0gW'
+url = 'https://youtube.com/playlist?list=PLL7ppauF4ZjqGG6iPPrNySe2QLQndI0gW&si=QrOEupcPY-5jEvGQ'
 [[2023]]
 name = 'Dylan Lockard'
 type = 'photos'
