--- a/package.json
+++ b/package.json
@@ -11,27 +11,22 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/image": "^0.16.1",
-    "@astrojs/sitemap": "^1.2.0",
-    "@astrojs/svelte": "^2.1.0",
-    "@astrojs/tailwind": "^3.1.1",
+    "@astrojs/sitemap": "^3.0.5",
+    "@astrojs/svelte": "^5.0.3",
+    "@astrojs/tailwind": "^5.1.0",
     "@splidejs/svelte-splide": "^0.2.9",
     "@types/marked": "^4.0.8",
-    "@xstate/svelte": "^2.0.1",
-    "astro": "^2.1.3",
+    "astro": "^4.2.1",
     "just-compact": "^3.2.0",
     "marked": "^4.2.5",
-    "svelte": "^3.55.0",
-    "svelte-spa-router": "^3.3.0",
-    "tailwindcss": "^3.3.2",
-    "xstate": "^4.37.2"
+    "svelte": "^4.2.9",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@rollup/plugin-yaml": "^4.1.0",
-    "@skeletonlabs/skeleton": "^1.2.5",
     "imagekit": "^4.1.3",
     "svelte-icons": "^2.1.0",
     "typescript-plugin-toml": "^0.2.0",
-    "vite-plugin-toml": "^0.5.0"
+    "vite-plugin-toml": "^0.6.0"
   }
 }
