--- a/src/data/supporters.toml
+++ b/src/data/supporters.toml
@@ -3,130 +3,149 @@ name = 'King County CREATIVE'
 footer = true
 url = 'https://kingcountycreative.com/'
 image_url = 'https://ik.imagekit.io/thegoldendino/hfw/supporters/king-county-creative_jHEHtTLOA.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=165083452915'
-image_ratio = '300:104'
+width = 300
+height = 104
 
 [[art]]
 name = '4Culture'
 footer = true
 url = 'http://www.4culture.org'
 image_url = 'https://ik.imagekit.io/thegoldendino/hfw/sponsors/4culture_IW6D7aOFH.png?updatedAt=1628178274430&tr=b-2_FFFFFF'
-image_ratio = '1:1'
+width = 1
+height = 1
 
 [[art.hide]]
 name = 'Arts Fund'
 footer = false
 url = 'https://www.artsfund.org/'
 image_url = 'https://ik.imagekit.io/thegoldendino/hfw/sponsors/ScreenArtsFund_Logo_Stacked_RGB_SM_BHsCBeExa.jpg?updatedAt=1628630949084&tr=b-18_FFFFFF'
-image_ratio = '961:499'
+width = 961
+height = 499
 
 [[grant]]
 name = 'National Endowment for the Arts'
 footer = true
 url = 'https://www.arts.gov/'
 image_url = 'https://ik.imagekit.io/thegoldendino/hfw/sponsors/nea_logo_xqSse_Pbb.jpg?updatedAt=1628843291841'
-image_ratio = '36:18'
+width = 36
+height = 18
 
 [[grant]]
 name = 'WA State Arts Commission'
 footer = true
 url = 'https://www.arts.wa.gov/'
 image_url = 'https://ik.imagekit.io/thegoldendino/hfw/sponsors/Transparent-background-ArtsWA-logo_State-with-full-name_2019_2HKh-O2il0I.png?updatedAt=1628630949914'
-image_ratio = '100:105'
+width = 100
+height = 105
 
 [[grant]]
 name = 'Seattle Department of Neighborhoods'
 footer = true
 url = 'https://www.seattle.gov/neighborhoods'
 image_url = 'https://ik.imagekit.io/thegoldendino/hfw/supporters/seattle-neighborhoods_gbnnL8OPS.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1673058115133'
-image_ratio = '23:7'
+width = 23
+height = 7
 
 [[grant]]
 name = 'Seattle Office of Arts & Culture'
 footer = true
 url = 'https://www.seattle.gov/arts'
 image_url = 'https://ik.imagekit.io/thegoldendino/hfw/supporters/OAC_logo_9fSxWFvCS.jpg?updatedAt=1680894463597'
-image_ratio = '43:39'
+width = 43
+height = 39
 
 [[shout_out]]
 name = 'Electric Habitat'
 footer = false
 url = 'https://www.electric-habitat.com/'
 image_url = 'https://ik.imagekit.io/thegoldendino/hfw/supporters/electric-habitat_cB5p_jJ9K.png?updatedAt=1679948893835'
-image_ratio = '1:1'
+width = 1
+height = 1
 
 [[shout_out]]
 name = 'Bennett Properties'
 footer = false
 url = 'https://johnbennettproperties.com/'
 image_url = 'https://ik.imagekit.io/thegoldendino/hfw/supporters/cropped-cropped-BP-logo-blue_ChFMGeCqT.png?ik-sdk-version=javascript-1.4.3&updatedAt=1653980515012'
-image_ratio = '2:1'
+width = 2
+height = 1
 
 [[shout_out]]
 name = 'Ballard Odd Fellows'
 footer = false
 url = 'https://www.ballardoddfellows.org/'
 image_url = 'https://ik.imagekit.io/thegoldendino/hfw/supporters/ballard-odd-fellows_WJs3tWsRj.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1653981434550'
-image_ratio = '114:63'
+width = 114
+height = 63
 
 [[shout_out]]
 name = 'Neon Brass Party'
 footer = false
 url = 'https://www.neonbrassparty.com/'
 image_url = 'https://ik.imagekit.io/thegoldendino/hfw/supporters/neon-brass-party_7z5XYNNpJ.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1651466257137&tr=w-600'
-image_ratio = '1:1'
+width = 1
+height = 1
 
 [[shout_out]]
 name = '9LB Hammer'
 footer = false
 url = 'http://ninepoundhammer.com/'
 image_url = 'https://ik.imagekit.io/thegoldendino/hfw/supporters/9lbhammer_lZ_kCbxpq.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1653980515906'
-image_ratio = '1701:2205'
+width = 1701
+height = 2205
 
 [[shout_out]]
 name = 'Rainier Valley Creative District'
 footer = false
 url = 'https://rainiervalleycreativedistrict.com/'
 image_url = 'https://ik.imagekit.io/thegoldendino/rvcd/brand/logo-lg_uqHNphXcj.png?ik-sdk-version=javascript-1.4.3&updatedAt=1636003240128'
-image_ratio = '1:1'
+width = 1
+height = 1
 
 [[shout_out]]
 name = 'Super Six'
 footer = false
 url = 'http://www.supersixseattle.com/'
 image_url = 'https://ik.imagekit.io/thegoldendino/hfw/supporters/SUPER_SIX_Logo_cA7OjRt0Y.png?ik-sdk-version=javascript-1.4.3&updatedAt=1654018810234'
-image_ratio = '2625:1064'
+width = 2625
+height = 1064
 
 [[shout_out]]
 name = 'Chomp!'
 footer = false
 url = 'https://www.chomplocal.org/'
 image_url = 'https://ik.imagekit.io/thegoldendino/hfw/supporters/CHOMP-Logo-Plain-2022_tt3do75MnI.png?ik-sdk-version=javascript-1.4.3&updatedAt=1653980516024'
-image_ratio = '3:1'
+width = 3
+height = 1
 
 [[shout_out]]
 name = 'Artisan Electric'
 footer = false
 url = 'https://artisanelectricinc.com/about/'
 image_url = 'https://ik.imagekit.io/thegoldendino/hfw/supporters/artisan_27p_gurW6.png?updatedAt=1684089172752'
-image_ratio = '1072:415'
+width = 1072
+height = 415
 
 [[shout_out]]
 name = 'Secret Aardvark'
 footer = false
 url = 'https://secretaardvark.com/'
 image_url = 'https://ik.imagekit.io/thegoldendino/hfw/supporters/SATC_LogoPrimary_nZQZuza_m.png?ik-sdk-version=javascript-1.4.3&updatedAt=1653980515982'
-image_ratio = '1:1'
+width = 1
+height = 1
 
 [[shout_out]]
 name = 'Jules Maes Saloon'
 footer = false
 url = 'https://www.julesmaessaloon.com/'
 image_url = 'https://ik.imagekit.io/thegoldendino/hfw/supporters/jules-maes_TVLJoZrK0.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1653980628229'
-image_ratio = '702:456'
+width = 702
+height = 456
 
 [[shout_out]]
 name = 'Columbia City Beatwalk'
 footer = false
 url = 'https://www.facebook.com/ColumbiaCityBeatwalk/'
 image_url = 'https://ik.imagekit.io/thegoldendino/hfw/supporters/BeatWalk-logo-blue-print___002__c_NNISjLkB.png?ik-sdk-version=javascript-1.4.3&updatedAt=1653980515968'
-image_ratio = '2982:1125'
+width = 2982
+height = 1125
