--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "astro": "^4.7.1",
     "just-compact": "^3.2.0",
     "marked": "^4.2.5",
-    "svelte": "^4.2.9",
+    "svelte": "^5.0.0-next.1",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
