add vscode svelte extension to dev container

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,8 @@
 		"vscode": {
 			"extensions": [
 				"bradlc.vscode-tailwindcss",
-				"astro-build.astro-vscode"
+				"astro-build.astro-vscode",
+				"svelte.svelte-vscode"
 			]
 		}
 	}
