--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "www-hfw",
   "type": "module",
-  "version": "1.0.0",
+  "version": "2024.0.0",
   "private": true,
   "scripts": {
     "dev": "astro dev",
@@ -19,14 +19,18 @@
     "astro": "^4.7.1",
     "just-compact": "^3.2.0",
     "marked": "^4.2.5",
-    "svelte": "^5.0.0-next.1",
-    "tailwindcss": "^3.4.1"
+    "svelte": "^4.2.0",
+    "tailwindcss": "^3.4.1",
+    "xstate": "^4.37.2",
+    "@xstate/svelte": "^2.0.1",
+    "svelte-spa-router": "^3.3.0"
   },
   "devDependencies": {
     "@rollup/plugin-yaml": "^4.1.0",
     "imagekit": "^5.0.0",
     "svelte-icons": "^2.1.0",
     "typescript-plugin-toml": "^0.2.0",
-    "vite-plugin-toml": "^0.6.0"
+    "vite-plugin-toml": "^0.6.0",
+    "@skeletonlabs/skeleton": "^1.2.5"
   }
 }
