--- a/src/data/schedule.toml
+++ b/src/data/schedule.toml
@@ -5,26 +5,26 @@
 "slotDuration" = 20
 "location" = "Georgetown"
 "mapUrl" = "https://goo.gl/maps/X1TwS4CkwqQyV1DUA" 
-"stages" = ["coffee", 		"overpass", "jules", 			"electric"]
+"stages" = ["coffee", 		"overpass", "electric"]
 [days.schedule]
-"18:00" = [ "8bit", 			"hungry", 	"jambalaya", 	"sticks" ]
-"18:20" = [ "neon", 			"hungry", 	"tacomarama", "chaotic" ]
-"18:40" = [ "soundwave", 	"carnival", "meownow", 		"baque" ]
-"19:00" = [ "reigncity", 	"carnival", "meownow", 		"brasscals" ]
-"19:20" = [ "redalert", 	"vamola", 	"onelove", 		"tacomarama" ]
-"19:40" = [ "jambalaya", 	"vamola", 	"chunky", 		"window" ]
-"20:00" = [ "bluethunder","filthy", 	"chunky", 		"meownow" ]
-"20:20" = [ "analog", 		"neighbors","baque", 			"meownow" ]
-"20:40" = [ "analog", 		"neon", 		"filthy", 		"artesian" ]
-"21:00" = [ "neighbors", 	"window", 	"8bit", 			"artesian" ]
-"21:20" = [ "mission", 		"chaotic", 	"sticks", 		"onelove" ]
-"21:40" = [ "mission", 		"chaotic", 	"tmb", 				"brasscals" ]
-"22:00" = [ "", 					"", 				"tmb",				"" ]
-"22:20" = [ "", 					"", 				"burnout", 		"" ]
-"22:40" = [ "", 					"", 				"burnout", 		"" ]
-"23:00" = [ "", 					"", 				"filthy", 		"" ]
-"23:20" = [ "", 					"", 				"jules", 			"" ]
-"23:40" = [ "", 					"", 				"jules", 			"" ]
+"18:00" = [ "onelove", 		"8bit", 	"onelove" ]
+"18:20" = [ "8bit", 			"onelove", 	"8bit" ]
+"18:40" = [ "soundwave", 	"carnival", "meownow" ]
+"19:00" = [ "reigncity", 	"carnival", "meownow" ]
+"19:20" = [ "redalert", 	"vamola", 	"onelove" ]
+"19:40" = [ "jambalaya", 	"vamola", 	"chunky" ]
+"20:00" = [ "bluethunder","filthy", 	"chunky" ]
+"20:20" = [ "analog", 		"neighbors","baque" ]
+"20:40" = [ "analog", 		"neon", 		"filthy" ]
+"21:00" = [ "neighbors", 	"window", 	"8bit" ]
+"21:20" = [ "mission", 		"chaotic", 	"sticks" ]
+"21:40" = [ "mission", 		"chaotic", 	"tmb" ]
+"22:00" = [ "", 					"", 				"tmb" ]
+"22:20" = [ "", 					"", 				"burnout" ]
+"22:40" = [ "", 					"", 				"burnout" ]
+"23:00" = [ "", 					"", 				"filthy" ]
+"23:20" = [ "", 					"", 				"jules" ]
+"23:40" = [ "", 					"", 				"jules" ]
 [days.coordinates]
 "info" = [845.0,1040.0]
 "medic" = [845.0,1130.0]
