--- a/src/data/stages.toml
+++ b/src/data/stages.toml
@@ -24,26 +24,26 @@ mapUrl = "https://goo.gl/maps/NrSbrYAvS5bcco1A8"
 
 [edmunds]
 name = "Edmunds Stage"
-x = 574.0
-y = 430.0
+x = 100.0
+y = 800.0
 mapUrl = "https://goo.gl/maps/9KWKxR7pyswJPLvx8"
 
 [columbia]
 name = "Columbia Park Stage"
-x = 385.0
-y = 900.0
+x = 510.0
+y = 150.0
 mapUrl = "https://goo.gl/maps/BLBqFWWAQqHJBhGX8"
 
 [37th]
-name = "Rainier Arts Stage"
-x = 250.0
-y = 270.0
+name = "37th Stage"
+x = 1220.0
+y = 1300.0
 mapUrl = "https://goo.gl/maps/DxAg4xmBYWnQR88d9"
 
 [gateway]
 name = "Gateway Stage"
-x = 870.0
-y = 1460.0
+x = 1000.0
+y = 930.0
 mapUrl = "https://goo.gl/maps/npUKYDL3MdtsQctg8"
 
 [shady]
