updated all map item locations

--- a/src/data/schedule.toml
+++ b/src/data/schedule.toml
@@ -56,9 +56,12 @@
 "19:00" = [ "tmb", 			"neighbors", 	"tacomarama", "" ]
 "19:30" = [ "allstars", "", 					"", 					"" ]
 [days.coordinates]
-"info" = [480.0,1270.0]
-"medic" = [480.0,1180.0]
-"potty" = [410.0,1330.0]
+"info" = [540.0,620.0]
+"medic" = [540.0,540.0]
+"potty" = [470.0,720.0]
+# "potty" = [410.0,1330.0]
+# "info" = [480.0,1270.0]
+# "medic" = [480.0,1180.0]
 
 
 [[days]]
@@ -90,6 +93,6 @@
 "17:40" = [ "", 				"allstars" ]
 "18:00" = [ "", 				"queens" ]
 [days.coordinates]
-"info" = [800.0,660.0]
-"medic" = [760.0,720.0]
-"potty" = [980.0, 640.0]
+"info" = [1200.0,420.0]
+"medic" = [1200.0,510.0]
+"potty" = [580.0, 1060.0]
