--- a/src/data/schedule.toml
+++ b/src/data/schedule.toml
@@ -7,24 +7,24 @@
 "mapUrl" = "https://goo.gl/maps/X1TwS4CkwqQyV1DUA" 
 "stages" = ["coffee", 		"overpass", "electric"]
 [days.schedule]
-"18:00" = [ "onelove", 		"8bit", 	"onelove" ]
-"18:20" = [ "8bit", 			"onelove", 	"8bit" ]
-"18:40" = [ "soundwave", 	"carnival", "meownow" ]
-"19:00" = [ "reigncity", 	"carnival", "meownow" ]
-"19:20" = [ "redalert", 	"vamola", 	"onelove" ]
-"19:40" = [ "jambalaya", 	"vamola", 	"chunky" ]
-"20:00" = [ "bluethunder","filthy", 	"chunky" ]
-"20:20" = [ "analog", 		"neighbors","baque" ]
-"20:40" = [ "analog", 		"neon", 		"filthy" ]
-"21:00" = [ "neighbors", 	"window", 	"8bit" ]
-"21:20" = [ "mission", 		"chaotic", 	"sticks" ]
-"21:40" = [ "mission", 		"chaotic", 	"tmb" ]
-"22:00" = [ "", 					"", 				"tmb" ]
-"22:20" = [ "", 					"", 				"burnout" ]
-"22:40" = [ "", 					"", 				"burnout" ]
-"23:00" = [ "", 					"", 				"filthy" ]
-"23:20" = [ "", 					"", 				"jules" ]
-"23:40" = [ "", 					"", 				"jules" ]
+"18:00" = [ "", 		"", 	"" ]
+"18:20" = [ "", 		"", 	"" ]
+"18:40" = [ "", 		"", 	"" ]
+"19:00" = [ "", 		"", 	"" ]
+"19:20" = [ "", 		"", 	"" ]
+"19:40" = [ "", 		"", 	"" ]
+"20:00" = [ "", 		"", 	"" ]
+"20:20" = [ "", 		"", 	"" ]
+"20:40" = [ "", 		"", 	"" ]
+"21:00" = [ "", 		"", 	"" ]
+"21:20" = [ "", 		"", 	"" ]
+"21:40" = [ "", 		"", 	"" ]
+"22:00" = [ "", 		"", 	"" ]
+"22:20" = [ "", 		"", 	"" ]
+"22:40" = [ "", 		"", 	"" ]
+"23:00" = [ "", 		"", 	"" ]
+"23:20" = [ "", 		"", 	"" ]
+"23:40" = [ "", 		"", 	"" ]
 [days.coordinates]
 "info" = [845.0,1040.0]
 "medic" = [845.0,1130.0]
@@ -39,59 +39,49 @@
 "mapUrl"= "https://goo.gl/maps/AWpWWjvZfAHwrNyv5"
 "stages"= [ "edmunds", 		"columbia", 		"gateway", 	"37th" ]
 [days.schedule]
-"12:00" = [ "chunky", 	"", 					"", 					"" ]
-"12:30" = [ "onelove", 	"artesian", 	"", 					"brassless" ]
-"13:00" = [ "ballard", 	"baque", 			"", 					"window" ]
-"13:30" = [ "carnival", "mission", 		"sticks", 		"chunky" ]
-"14:00" = [ "vamola", 	"neighbors", 	"meownow", 		"artesian" ]
-"14:30" = [ "burnout", 	"hungry", 		"meownow", 		"8bit" ]
-"15:00" = [ "filthy", 	"brasscals", 	"kouyate", 		"8bit" ]
-"15:30" = [ "chaotic", 	"tacomarama", "tmb", 				"onelove" ]
-"16:00" = [ "neighbors","window", 		"ballard", 		"carnival" ]
-"16:30" = [ "tmb", 			"filthy", 		"burnout", 		"meownow" ]
-"17:00" = [ "hungry", 	"vamola", 		"gansango", 	"meownow" ]
-"17:30" = [ "mission", 	"neon", 			"chunky", 		"sticks" ]
-"18:00" = [ "8bit", 		"chaotic", 		"brasscals",	"" ]
-"18:30" = [ "chunky", 	"baque", 			"brassless",	"" ]
-"19:00" = [ "tmb", 			"neighbors", 	"tacomarama", "" ]
-"19:30" = [ "allstars", "", 					"", 					"" ]
+"12:00" = [ "", 	"", 					"", 					"" ]
+"12:30" = [ "", 	"", 					"", 					"" ]
+"13:00" = [ "", 	"", 					"", 					"" ]
+"13:30" = [ "", 	"", 					"", 					"" ]
+"14:00" = [ "", 	"", 					"", 					"" ]
+"14:30" = [ "", 	"", 					"", 					"" ]
+"15:00" = [ "", 	"", 					"", 					"" ]
+"15:30" = [ "", 	"", 					"", 					"" ]
+"16:00" = [ "", 	"", 					"", 					"" ]
+"16:30" = [ "", 	"", 					"", 					"" ]
+"17:00" = [ "", 	"", 					"", 					"" ]
+"17:30" = [ "", 	"", 					"", 					"" ]
+"18:00" = [ "", 	"", 					"", 					"" ]
+"18:30" = [ "", 	"", 					"", 					"" ]
+"19:00" = [ "", 	"", 					"", 					"" ]
+"19:30" = [ "", 	"", 					"", 					"" ]
 [days.coordinates]
 "info" = [540.0,620.0]
 "medic" = [540.0,540.0]
 "potty" = [470.0,720.0]
-# "potty" = [410.0,1330.0]
-# "info" = [480.0,1270.0]
-# "medic" = [480.0,1180.0]
 
 
 [[days]]
 "date"	= "2023-06-02"
 "startTime" = "12:00"
 "endTime" = "18:00"
-"slotDuration" = 20
+"slotDuration" = 30
 "location" = "Pratt Park"
 "mapUrl" = "https://maps.app.goo.gl/nX3NEqR9PTTX1KnC6"
-"stages"= [ "shady", 		"sun" ]
+"stages"= [ "hill", 		"field" ]
 [days.schedule]
-"12:00" = [ "", "brassless" ]
-"12:20" = [ "artesian", "seattleu" ]
-"12:40" = [ "goat", 		"neighbors" ]
-"13:00" = [ "chunky", 	"neighbors" ]
-"13:20" = [ "chunky", 	"meownow" ]
-"13:40" = [ "filthy", 	"meownow" ]
-"14:00" = [ "step", 		"baque" ]
-"14:20" = [ "khmer", 		"mission" ]
-"14:40" = [ "seismic", 	"mission" ]
-"15:00" = [ "carnival", "brasscals" ]
-"15:20" = [ "carnival", "brasscals" ]
-"15:40" = [ "kokon", 		"onelove" ]
-"16:00" = [ "8bit", 		"sticks" ]
-"16:20" = [ "tmb", 			"chaotic" ]
-"16:40" = [ "hungry", 	"burnout" ]
-"17:00" = [ "hungry", 	"tacomarama" ]
-"17:20" = [ "", 				"neon" ]
-"17:40" = [ "", 				"allstars" ]
-"18:00" = [ "", 				"queens" ]
+"12:00" = [ "", "" ]
+"12:30" = [ "", "" ]
+"13:00" = [ "", "" ]
+"13:30" = [ "", "" ]
+"14:00" = [ "", "" ]
+"14:30" = [ "", "" ]
+"15:00" = [ "", "" ]
+"15:30" = [ "", "" ]
+"16:00" = [ "", "" ]
+"16:30" = [ "", "" ]
+"17:00" = [ "", "" ]
+"17:30" = [ "", "" ]
 [days.coordinates]
 "info" = [1200.0,420.0]
 "medic" = [1200.0,510.0]
