--- a/package.json
+++ b/package.json
@@ -16,21 +16,22 @@
     "@astrojs/tailwind": "^5.1.0",
     "@splidejs/svelte-splide": "^0.2.9",
     "@types/marked": "^4.0.8",
+    "@xstate/svelte": "^2.0.1",
     "astro": "^4.7.1",
     "just-compact": "^3.2.0",
     "marked": "^4.2.5",
+    "sharp": "^0.33.3",
     "svelte": "^4.2.0",
+    "svelte-spa-router": "^3.3.0",
     "tailwindcss": "^3.4.1",
-    "xstate": "^4.37.2",
-    "@xstate/svelte": "^2.0.1",
-    "svelte-spa-router": "^3.3.0"
+    "xstate": "^4.37.2"
   },
   "devDependencies": {
     "@rollup/plugin-yaml": "^4.1.0",
+    "@skeletonlabs/skeleton": "^1.2.5",
     "imagekit": "^5.0.0",
     "svelte-icons": "^2.1.0",
     "typescript-plugin-toml": "^0.3.1",
-    "vite-plugin-toml": "^0.6.0",
-    "@skeletonlabs/skeleton": "^1.2.5"
+    "vite-plugin-toml": "^0.6.0"
   }
 }
