--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^5.2.1",
     "@astrojs/sitemap": "^3.1.4",
     "@astrojs/svelte": "^5.4.0",
     "@astrojs/tailwind": "^5.1.0",
@@ -20,7 +21,6 @@
     "astro": "^4.7.1",
     "just-compact": "^3.2.0",
     "marked": "^4.2.5",
-    "sharp": "^0.33.3",
     "svelte": "^4.2.0",
     "svelte-spa-router": "^3.3.0",
     "tailwindcss": "^3.4.1",
